force-app/main/default/objects/NewUserRequest__c/NewUserRequest__c.object-meta.xml
<CustomObject>
    <label>New User Request</label>
    <nameField>
        <label>Last Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>New User Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>