force-app/main/default/objects/NewUserRequest__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>New User Requests</relationshipLabel>
    <relationshipName>New_User_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>