force-app/main/default/objects/NewUserRequest__c/fields/ERP_UID__c.field-meta.xml
<CustomField>
    <fullName>ERP_UID__c</fullName>
    <label>ERP UID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>