force-app/main/default/objects/NewUserRequest__c/fields/ID_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_ERP__c</fullName>
    <label>Employee Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>