force-app/main/default/objects/NewUserRequest__c/fields/JobTitle__c.field-meta.xml
<CustomField>
    <fullName>JobTitle__c</fullName>
    <label>Job Title</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>UserType__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Job_Titles</valueSetName>
    </valueSet>
</CustomField>