force-app/main/default/objects/NewUserRequest__c/fields/LoginERP__c.field-meta.xml
<CustomField>
    <fullName>LoginERP__c</fullName>
    <label>Login in ERP</label>
    <length>18</length>
    <type>Text</type>
</CustomField>