force-app/main/default/objects/NewUserRequest__c/fields/ReportTo__c.field-meta.xml
<CustomField>
    <fullName>ReportTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Report To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>New_User_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>