force-app/main/default/objects/NewUserRequest__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manager Sales</fullName>
                <label>Sales Manager</label>
            </value>
            <value>
                <fullName>Senior Sales</fullName>
                <label>Sales Senior Manager</label>
            </value>
            <value>
                <fullName>Chief Sales</fullName>
                <label>Sales Chief Officer</label>
            </value>
            <value>
                <fullName>BO Specialist</fullName>
            </value>
            <value>
                <fullName>BO Manager</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Product &amp; Resources</fullName>
            </value>
            <value>
                <fullName>Directors</fullName>
            </value>
            <value>
                <fullName>Top Management</fullName>
            </value>
            <value>
                <fullName>IT Department</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>