force-app/main/default/objects/NewUserRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>UserType__c</columns>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>Country__c</columns>
    <columns>BusinessDivision__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>JobTitle__c</columns>
    <columns>Email__c</columns>
    <columns>Mobile__c</columns>
    <columns>Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>